--- a/worldlinetest/Storyboards/Base.lproj/Main.storyboard
+++ b/worldlinetest/Storyboards/Base.lproj/Main.storyboard
@@ -19,6 +19,9 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Djb-Ev-jsE">
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="xAi-Pd-1pS"/>
+                                </connections>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -30,14 +33,89 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="S5R-Y7-3zT"/>
+                    <navigationItem key="navigationItem" id="p3R-bD-44v"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="mapView" destination="Djb-Ev-jsE" id="D5V-2X-o1z"/>
+                        <segue destination="iCO-pY-o0h" kind="show" identifier="showDetail" id="1Qk-9L-p8f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="897" y="-238"/>
+            <point key="canvasLocation" x="1836" y="-238.83058470764618"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="G1O-RD-cRj">
+            <objects>
+                <viewController id="iCO-pY-o0h" customClass="DetailViewController" customModule="worldlinetest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EHU-EJ-YGP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hh9-Gb-qcO">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="customCell" rowHeight="88" id="Cz1-HR-frf" customClass="CustomCell" customModule="worldlinetest" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="88"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Cz1-HR-frf" id="eMf-71-mKx">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="87.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XI2-9r-0fa">
+                                                    <rect key="frame" x="15" y="8" width="59" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECL-CE-yaa">
+                                                    <rect key="frame" x="15" y="30" width="345" height="39"/>
+                                                    <string key="text">The Museu d'Art Modern Europeu, MEAM, presents the best contemporary figurative art. It belongs to the Fundació de les Arts i els Artistes, the purpose is the promotionand dissemination of figurative art XX and XXI century.</string>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XI2-9r-0fa" secondAttribute="trailing" constant="15" id="50c-Ch-G3p"/>
+                                                <constraint firstItem="XI2-9r-0fa" firstAttribute="top" secondItem="eMf-71-mKx" secondAttribute="top" constant="8" id="JF6-D3-5yI"/>
+                                                <constraint firstItem="XI2-9r-0fa" firstAttribute="leading" secondItem="eMf-71-mKx" secondAttribute="leading" constant="15" id="QsO-Y9-5ys"/>
+                                                <constraint firstItem="ECL-CE-yaa" firstAttribute="top" secondItem="XI2-9r-0fa" secondAttribute="bottom" constant="4" id="S3V-VS-0jS"/>
+                                                <constraint firstAttribute="trailing" secondItem="ECL-CE-yaa" secondAttribute="trailing" constant="15" id="eYE-9C-mD5"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="ECL-CE-yaa" secondAttribute="bottom" constant="8" id="g0N-Oa-jOg"/>
+                                                <constraint firstItem="ECL-CE-yaa" firstAttribute="leading" secondItem="XI2-9r-0fa" secondAttribute="leading" id="wFN-0s-hkz"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="descriptionLabel" destination="ECL-CE-yaa" id="hhi-4f-H0c"/>
+                                            <outlet property="titleLabel" destination="XI2-9r-0fa" id="1qa-eA-0LA"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="iCO-pY-o0h" id="MuV-Aa-60O"/>
+                                    <outlet property="delegate" destination="iCO-pY-o0h" id="XGl-Gq-Ygu"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="v26-qX-bqV" firstAttribute="bottom" secondItem="hh9-Gb-qcO" secondAttribute="bottom" id="1NR-Wz-H1L"/>
+                            <constraint firstItem="v26-qX-bqV" firstAttribute="trailing" secondItem="hh9-Gb-qcO" secondAttribute="trailing" id="GXs-2x-bhB"/>
+                            <constraint firstItem="hh9-Gb-qcO" firstAttribute="leading" secondItem="v26-qX-bqV" secondAttribute="leading" id="ZPf-QG-jDQ"/>
+                            <constraint firstItem="hh9-Gb-qcO" firstAttribute="top" secondItem="v26-qX-bqV" secondAttribute="top" id="gJc-Gn-xFw"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="v26-qX-bqV"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="detailTableView" destination="hh9-Gb-qcO" id="Y3K-tK-XGP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wTo-Bz-ENK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2776.8000000000002" y="-237.03148425787109"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Xf2-Wb-8GM">
@@ -61,17 +139,37 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="ckf-U5-JMO" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="knH-al-07g">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="BE2-Fs-gQh"/>
+                        <segue destination="T39-sx-YKN" kind="relationship" relationship="viewControllers" id="BE2-Fs-gQh"/>
                         <segue destination="wly-b9-sRV" kind="relationship" relationship="viewControllers" id="dJs-S4-5Cu"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D8W-Y6-R3p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="67.916041979010501"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="b4O-HX-LLA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="T39-sx-YKN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="S5R-Y7-3zT"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VVb-ye-k1p">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="H3m-YV-6s6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4yP-ke-SSe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="896.79999999999995" y="-238.83058470764618"/>
         </scene>
     </scenes>
 </document>
