--- a/worldlinetest/Storyboards/Base.lproj/Main.storyboard
+++ b/worldlinetest/Storyboards/Base.lproj/Main.storyboard
@@ -117,21 +117,67 @@
             </objects>
             <point key="canvasLocation" x="2776.8000000000002" y="-237.03148425787109"/>
         </scene>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="Xf2-Wb-8GM">
             <objects>
-                <viewController id="wly-b9-sRV" sceneMemberID="viewController">
+                <viewController id="wly-b9-sRV" customClass="SearchViewController" customModule="worldlinetest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zNx-AC-ZUw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KTV-ed-48o">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="basicCell" id="xPE-jD-et5" customClass="BasicCell" customModule="worldlinetest" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xPE-jD-et5" id="LBi-aS-4UG">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MYf-zf-uVv">
+                                                    <rect key="frame" x="15" y="11" width="0.0" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="MYf-zf-uVv" firstAttribute="leading" secondItem="LBi-aS-4UG" secondAttribute="leadingMargin" id="0ns-WJ-VD6"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="MYf-zf-uVv" secondAttribute="trailing" id="U0i-lg-oTx"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="MYf-zf-uVv" secondAttribute="bottom" id="lwv-bP-9Bf"/>
+                                                <constraint firstItem="MYf-zf-uVv" firstAttribute="top" secondItem="LBi-aS-4UG" secondAttribute="topMargin" id="uJV-WM-z7g"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="MYf-zf-uVv" id="4fC-YC-X6V"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="wly-b9-sRV" id="nfZ-gy-Bcl"/>
+                                    <outlet property="delegate" destination="wly-b9-sRV" id="h7a-lz-eMI"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KTV-ed-48o" firstAttribute="leading" secondItem="SgK-Ri-k0m" secondAttribute="leading" id="07n-UE-qZr"/>
+                            <constraint firstItem="KTV-ed-48o" firstAttribute="top" secondItem="SgK-Ri-k0m" secondAttribute="top" id="Ivp-bP-5XN"/>
+                            <constraint firstItem="SgK-Ri-k0m" firstAttribute="trailing" secondItem="KTV-ed-48o" secondAttribute="trailing" id="YIg-13-iUQ"/>
+                            <constraint firstItem="SgK-Ri-k0m" firstAttribute="bottom" secondItem="KTV-ed-48o" secondAttribute="bottom" id="dMl-gl-PYd"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="SgK-Ri-k0m"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="CEL-ws-d9v"/>
+                    <navigationItem key="navigationItem" id="Fsw-NJ-ndU"/>
+                    <connections>
+                        <outlet property="searchTableView" destination="KTV-ed-48o" id="es9-TK-EjM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bBc-P6-bSe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="897" y="428"/>
+            <point key="canvasLocation" x="1836" y="427.73613193403304"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Czs-bK-x7X">
@@ -145,7 +191,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="T39-sx-YKN" kind="relationship" relationship="viewControllers" id="BE2-Fs-gQh"/>
-                        <segue destination="wly-b9-sRV" kind="relationship" relationship="viewControllers" id="dJs-S4-5Cu"/>
+                        <segue destination="tv9-C0-74N" kind="relationship" relationship="viewControllers" id="dJs-S4-5Cu"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D8W-Y6-R3p" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -170,6 +216,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4yP-ke-SSe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="896.79999999999995" y="-238.83058470764618"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DZS-mp-CSz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tv9-C0-74N" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="search" id="CEL-ws-d9v"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eE3-TP-lvN">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wly-b9-sRV" kind="relationship" relationship="rootViewController" id="nSY-Ij-8IA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ja1-Q2-GvR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="896.79999999999995" y="427.73613193403304"/>
         </scene>
     </scenes>
 </document>
